# RedPen

./: .gitignore  README.md  README_CN.md  install.sh  pyproject.toml
docs/plans/: 2026-04-12-redpen-extreme-product-taste-plan.md  2026-04-12-redpen-next-level-product-plan.md
examples/: edits.json  sample.docx
examples/recipes/: README.md  proofread.json  reviewer.json  tighten.json
examples/showcase/: README.md
redpen/: __init__.py  academic.py  cli.py  comment_writer.py  config.py  differ.py  format_preserver.py  llm.py  recipes.py  review.py  review_runner.py  revision_writer.py  schema.py
tests/: conftest.py  test_academic.py  test_cli.py  test_inspect_check.py  test_llm.py  test_review.py
